--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -84,9 +84,19 @@
 						</a>
 					</div>
 					<div class="grid-50">
-		        <button class="button inline upload u-margin-top-30 upload_button delete-collection" style="border: none; box-shadow: none;">
+		        <!-- <button class="button inline upload u-margin-top-30 upload_button delete-collection" style="border: none; box-shadow: none;">
 		          <i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR
-		        </button>
+		        </button> -->
+
+            <button class="button inline upload work-delete trash" style="border: none; box-shadow: none;">
+              <i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR
+            </button>
+    				<div class="edit-options work-delete-confirm">
+    					ELIMINAR? &nbsp;
+    					<i class="bi_interface-box-tick work-delete-force save-icon" style="display: inline;"></i>
+    					<i class="bi_interface-box-cross work-delete-cancel cancel-icon" style="display: inline;"></i>
+    				</div>
+
 					</div>
 				</div>
 			</form>
