--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1687,10 +1687,13 @@ body
 	color #959ea0
 	line-height 1.25
 	a
-		color #959ea0
-		padding-right: 5px;
+		padding-right: 10px;
 	i
-		margin-right 10px
+		background: #000;
+		color: #fff;
+		width: 30px;
+		text-align: center;
+		line-height: 30px;
 
 .empty-profile-text
 	color: #9b9b9b;
