--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -227,7 +227,7 @@
 	<div class="grid-container reviews-container {% if currentPath !== 'reviews' %} hide {% endif %}">
 	  <div class="grid-100">
 	    <div class="reviews">
-	      <p class="title">Reviews &nbsp;&nbsp;<span>{{reviews.length}}</span></p>
+	      <p class="title" style="margin-top: 30px;">Reviews &nbsp;&nbsp;<span>{{reviews.length}}</span></p>
 	      <div class="u-separator"></div>
 	      <div class='reviews-items-container'>
 	      </div>
@@ -257,7 +257,7 @@
   <div class="grid-container tags-container {% if currentPath !== 'tags' %} hide {% endif %}">
     <div class="grid-100">
       <div class="tags-container">
-        <p class="title">Tags&nbsp;&nbsp;<span class="tags-number">{{tags.length}}</span></p>
+        <p class="title" style="margin-top: 30px;">Tags&nbsp;&nbsp;<span class="tags-number">{{tags.length}}</span></p>
         <div class="u-separator"></div>
 				{% if tags.length > 1 %}
 					<div class="tags work-tags">
