--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -133,6 +133,8 @@
 	{% include 'elements/product.html' %}
 	{% include 'elements/collection.html' %}
 	{% include 'elements/carrouselItem.html' %}
+	{% include 'elements/feed-user-follow.html' %}
+	{% include 'elements/feed-work-created.html' %}
 
 	{% include 'elements/review.html' %}
 	{% include 'elements/filterItem.html' %}
