--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -6,9 +6,9 @@
 
 	<title>Arte Manifiesto</title>
 
-	<link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<!-- <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'> -->
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
 
 	<link rel="stylesheet" href="/chosen.css">
 	<link rel="stylesheet" href="/css/budicon.css">
@@ -92,19 +92,18 @@
 	  };
 	</script>
 	<script src="/adapt.min.js"></script>
-
-	<script src="/EventDispatcher.js" lang="text/javascript"></script>
-	<script src="http://code.jquery.com/jquery-2.1.1.min.js" lang="text/javascript"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.js" lang="text/javascript"></script>
+	<script src="/EventDispatcher.js"></script>
+	<script src="/jquery-2.1.1.min.js"></script>
+	<script src="/moment.js"></script>
 	<script src='/app.min.js'></script>
-	<script src="http://imagesloaded.desandro.com/imagesloaded.pkgd.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.min.js"></script>
+	<script src="/imagesloaded.pkgd.min.js"></script>
+	<script src="/masonry.pkgd.min.js"></script>
 	<script src="/jquery.leanModal.min.js"></script>
-	<script src='/jquery.tagsinput.js' type='text/javascript'></script>
-	<script src='/jquery.ui.widget.js' type='text/javascript'></script>
-	<script src='/jquery.iframe-transport.js' type='text/javascript'></script>
-	<script src='/jquery.fileupload.js' type='text/javascript'></script>
-	<script src='/jquery.cloudinary.js' type='text/javascript'></script>
+	<script src='/jquery.tagsinput.js'></script>
+	<script src='/jquery.ui.widget.js'></script>
+	<script src='/jquery.iframe-transport.js'></script>
+	<script src='/jquery.fileupload.js'></script>
+	<script src='/jquery.cloudinary.js'></script>
 	<script>
 	var owner = {{owner|json|safe}};
 	DataApp.currentUser = {{user|json|safe}} || null;
