--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -50,7 +50,7 @@
 				</div>
 				<div class="switch u-margin-top-10">
 					<p class="title">Público</p>
-					<span class="value">On</span>
+					<span class="value" id="public-value"></span>
 					<input type="checkbox" name="public" id="public" checked/>
 					<label for="public">
 						<div class="am-Switch-button">
@@ -126,69 +126,15 @@
 $(document).ready(function() {
 	$.cloudinary.config({{cloudinary.config()|json|safe}});
 	new APP.AddWorkScreen();
-	//
-	// $('input[name=tags]').tagsInput({
-	// 	height:'50px', width:'100%', defaultText:'+ Etiqueta'
-	// });
-	// var uploaderImage = new APP.UploaderImage($('.uploader-work'), function(idImage) {
-	// 		this.$view.find('.upload').show();
-	// 		$('.cloudinary-fileupload').show();
-	// 		$.cloudinary.image(idImage, {width: 300, crop:'limit'})
-	// 		.appendTo(this.$view.find('.preview'));
-	// });
-	//
-	// $('.work-form').submit(function(event) {
-	// 	event.preventDefault();
-	// 	var tags = $('input[name=tags]').val();
-	// 	var photo = uploaderImage.photo;
-	// 	if(!photo) {
-	// 		return alert('agrega foto mierda T_T');
-	// 	}
-	// 	if(tags.split(',')[0].length < 1) {
-	// 		return alert('agrega tags ctv');
-	// 	}
-	// 	$('.send').hide();
-	// 	$('.send-loading').show();
-	// 	$.ajax({
-	// 		method: 'POST',
-	// 		url: DataApp.currentUser.url + '/work/create',
-	// 		data: {
-	// 			photo: photo,
-	// 			name: $('input[name=name]').val(),
-	// 			idCategory: parseInt($('select[name=category]').val(), 10),
-	// 			tags: tags,
-	// 			description: $('textarea[name=description]').val(),
-	// 			public: $('input[name=public]:checked').val() !== undefined
-	// 		}
-	// 	}).then(function(response) {
-	// 		$('.send').show();
-	// 		$('.send-loading').hide();
-	// 		if (response.status === 200) {
-	// 			var work = response.data.work;
-	// 			$('.work-form').hide();
-	// 			var workUrl = DataApp.currentUser.url + '/work/' + work.nameSlugify
-	// 			$('.work-view').attr('href', workUrl);
-	// 			$('.work-new').attr('href', DataApp.currentUser.url + '/work/add');
-	// 			$('.work-edit').attr('href', workUrl + '/edit');
-	// 			$('.work-photo-published').attr('src', Utils.addImageFilter(work.photo, 'w_300,c_limit'));
-	// 			$('.work-name-published').text(work.name);
-	// 			$('.work-user-published').text(DataApp.currentUser.fullname);
-	// 			$('.work-published').show();
-	// 			$('.work-delete').click(function(event) {
-	// 				event.preventDefault();
-	// 				$.ajax({
-	// 					method: 'POST',
-	// 					url: DataApp.currentUser.url + '/work/delete',
-	// 					data: {idWork: work.id}
-	// 				}).then(function(response) {
-	// 					if (response.status === 200) {
-	// 						window.location.href =  DataApp.currentUser.url;
-	// 					}
-	// 				});
-	// 			});
-	// 		}
-	// 	});
-	// });
+
+
+	$("input[name=public]").change(function() {
+    if(this.checked)
+			$('#public-value').text('On')
+    else
+			$('#public-value').text('Off')
+	});
+
 });
 </script>
 {% endblock %}
