--- a/app/views/partials/elements/feed-user-follow.html
+++ b/app/views/partials/elements/feed-user-follow.html
@@ -2,7 +2,7 @@
   <div class="feed-card u-margin-top-40">
     <header class="feed-card-header">
       <div class="user">
-        <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448413621/d35z0dcxnppobefpreco.jpg">&nbsp;&nbsp;&nbsp;
+        <img src="<%= User.photo %>">&nbsp;&nbsp;&nbsp;
         <p><%= User.fullname %></p>
       </div>
       <div class="info">
