antes de pulear

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3219,7 +3219,32 @@ body
 *------------------------------------*/
 .feed
 	background #bac5c7
-	padding 40px 20px
+	padding 10px 20px 40px 20px
+
+	.feed-title
+		background white
+		max-width 540px
+		margin auto
+		border-radius 4px
+		.user-info
+			.avatar
+				display flex
+				align-items center
+				img
+					width 50px
+					height 50px
+					min-width 50px
+					border-radius 50%
+				.info
+					.name
+						font-family: 'Montserrat',sans-serif;
+						font-weight bold
+						letter-spacing 1.5px
+						font-size 11px
+						color charcoal-grey
+
+
+
 	&-inner
 		max-width 540px
 		margin auto
@@ -3331,12 +3356,14 @@ body
 			color #333
 			display flex
 			align-items center
-			padding 20px
+			// padding 20px
+			padding: 20px 10px;
 			img
 				width 30px
 				min-width 30px
 				height 30px
 				border-radius 50%
+				margin 3px
 			p
 				font-family: 'Montserrat',sans-serif;
 				font-size 12px
@@ -3353,6 +3380,17 @@ body
 			&-images
 				div
 					height 270px
+
+
+/*------------------------------------*
+	$ NOTIFICATIONS
+*------------------------------------*/
+// .notifications-container
+// 	background #d8d8d8
+
+// 	.notifications
+// 		.notification
+
 
 
 
