--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -2,6 +2,31 @@
 
 {% block elements %}
 	<div class="feed">
+		<div class="feed-title">
+			<div class="user-info">
+				<div class="avatar">
+					<img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448309987/mzfaeedegqqsjwzxt0oj.jpg">
+					<div class="info">
+						<p class="name">ARTYOM <br> TARASOV</p>
+						<p class="city">Lima, Perú</p>
+					</div>
+				</div>
+				<div class="stats">
+					<div class="stat">
+						<p>18</p>
+						<p>followers</p>
+					</div>
+					<div class="stat">
+						<p>21</p>
+						<p>posts</p>
+					</div>
+					<div class="stat">
+						<p>264</p>
+						<p>following</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="feed-inner">
 		</div>
 	</div>
