--- a/app/views/partials/elements/feed-work-created.html
+++ b/app/views/partials/elements/feed-work-created.html
@@ -1,17 +1,19 @@
 <script type="text/template" id="template-feed-work-created">
-  <div class="feed-card">
+  <div class="feed-card u-margin-top-40">
     <header class="feed-card-header">
-      <div class="user">
+      <a href="#" class="user">
         <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448413621/d35z0dcxnppobefpreco.jpg">&nbsp;&nbsp;&nbsp;
         <p>Sergio Gonzales Mucho</p>
-      </div>
+      </a>
       <div class="info">
         <p>hace 1 min</p>&nbsp;&nbsp;&nbsp;
         <i class="bi_interface-plus"></i>
       </div>
     </header>
 
-    <img class="feed-card-image" src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/6e32d4d1e3917831b07e4f0e53faea90.jpg">
+    <a href="#">
+      <img class="feed-card-image" src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/6e32d4d1e3917831b07e4f0e53faea90.jpg">
+    </a>
 
     <section class="feed-card-info">
       <div class="info">
