--- a/app/views/partials/elements/feed-user-follow.html
+++ b/app/views/partials/elements/feed-user-follow.html
@@ -1,10 +1,10 @@
 <script type="text/template" id="template-feed-user-follow">
   <div class="feed-card u-margin-top-40">
     <header class="feed-card-header">
-      <div class="user">
+      <a href="#" class="user">
         <img src="<%= User.photo %>">&nbsp;&nbsp;&nbsp;
         <p><%= User.fullname %></p>
-      </div>
+      </a>
       <div class="info">
         <p><%=formatDate(createdAt)%></p>&nbsp;&nbsp;&nbsp;
         <i class="bi_interface-plus"></i>
@@ -13,7 +13,7 @@
 
     <div class="u-separator" style="background: #ccc;"></div>
 
-    <section class="feed-card-userInfo">
+    <a href="#" class="feed-card-userInfo">
       <img src="<%= element.photo %>">
       <div class="info">
         <p class="name"><%= element.fullname %></p>
@@ -23,12 +23,15 @@
           <i class="bi_ecommerce-diamon"></i>&nbsp;<span class="likes">300</span>
         </p>
       </div>
-    </section>
+    </a>
 
     <section class="feed-card-images">
       <% _.each([0,1,2,3], function(i) { %>
         <% if(element.Works[i] && element.Works[i].photo) { %>
-          <div style="background-image: url('<%= addFilter(element.Works[i].photo, 'w_300,h_300,c_fill') %>')"></div>
+            <div style="background-image: url('<%= addFilter(element.Works[i].photo, 'w_300,h_300,c_fill') %>')">
+              <a href="#" style="display: block; height: 100%; width: 100%;">
+              </a>
+            </div>
         <% } else { %>
           <div class="artist-card-work empty"></div>
         <% } %>
@@ -44,9 +47,12 @@
     <footer class="feed-card-footer">
       <% _.each([0,1,2], function(i) { %>
         <% if(element.friends[i] && element.friends[i].photo) { %>
-          <img src="<%= element.friends[i].photo %>"></img>
+          <a href="#">
+            <img src="<%= element.friends[i].photo %>"></img>
+          </a>
         <% } %>
       <% }); %>
+      &nbsp;&nbsp;
       <% if(element.friends.length > 3) { %>
         <p>y <%= element.friends.length - 3 %> amigos siguieron a este artista</p>
       <% } else { %>
