antes de pulear

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3227,6 +3227,7 @@ body
 		margin auto
 		border-radius 4px
 		.user-info
+			// padding 15px 20px
 			.avatar
 				display flex
 				align-items center
@@ -3242,7 +3243,19 @@ body
 						letter-spacing 1.5px
 						font-size 11px
 						color charcoal-grey
-
+			.stats
+				display flex
+				background #f9f9f9
+				.stat
+					text-align center
+					p:first-child
+						font-family: 'Montserrat',sans-serif;
+						font-size 21px
+						color charcoal-grey
+					p:last-child
+						font-family: 'PT Serif', serif;
+						font-size 12px
+						color #838d8f
 
 
 	&-inner
