--- a/app/styles/utilities.styl
+++ b/app/styles/utilities.styl
@@ -1,6 +1,8 @@
 /*------------------------------------*
 	$ UTILITIES
 *------------------------------------*/
+.u-margin-top-5
+	margin-top 5px
 .u-margin-top-7
 	margin-top 7px
 .u-margin-top-10
