--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3226,16 +3226,27 @@ body
 		max-width 540px
 		margin auto
 		border-radius 4px
+		.title
+			text-align center
+			padding 20px
+			font-weight bold
+			letter-spacing 2px
+			font-size 18px
+			color charcoal-grey
+			font-family: 'Montserrat',sans-serif;
 		.user-info
-			// padding 15px 20px
+			display flex
 			.avatar
+				flex 1
 				display flex
 				align-items center
+				padding 15px
 				img
 					width 50px
 					height 50px
 					min-width 50px
 					border-radius 50%
+					margin-right 10px
 				.info
 					.name
 						font-family: 'Montserrat',sans-serif;
@@ -3243,11 +3254,21 @@ body
 						letter-spacing 1.5px
 						font-size 11px
 						color charcoal-grey
+						line-height 1.35
+					.city
+						font-family: 'PT Serif', serif;
+						font-size 12px
+						color #838d8f
+
 			.stats
 				display flex
 				background #f9f9f9
 				.stat
+					padding 20px 15px
 					text-align center
+					display flex
+					flex-direction column
+					justify-content center
 					p:first-child
 						font-family: 'Montserrat',sans-serif;
 						font-size 21px
@@ -3256,6 +3277,7 @@ body
 						font-family: 'PT Serif', serif;
 						font-size 12px
 						color #838d8f
+						font-style italic
 
 
 	&-inner
