--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -3,26 +3,28 @@
 {% block elements %}
 	<div class="feed">
 		<div class="feed-title">
+			<div class="title">MY FEED</div>
+			<div class="u-separator" style="background: #eee;"></div>
 			<div class="user-info">
 				<div class="avatar">
 					<img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448309987/mzfaeedegqqsjwzxt0oj.jpg">
 					<div class="info">
 						<p class="name">ARTYOM <br> TARASOV</p>
-						<p class="city">Lima, Perú</p>
+						<p class="city u-margin-top-5">Lima, Perú</p>
 					</div>
 				</div>
 				<div class="stats">
 					<div class="stat">
 						<p>18</p>
-						<p>followers</p>
+						<p class="u-margin-top-7">followers</p>
 					</div>
 					<div class="stat">
 						<p>21</p>
-						<p>posts</p>
+						<p class="u-margin-top-7">posts</p>
 					</div>
 					<div class="stat">
 						<p>264</p>
-						<p>following</p>
+						<p class="u-margin-top-7">following</p>
 					</div>
 				</div>
 			</div>
