add subtitle messages in feed cards

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3299,10 +3299,19 @@ body
 					min-width 40px
 					height 40px
 					border-radius 50%
-				p
+				p:first-child
 					font-family: 'Montserrat',sans-serif;
 					font-size 12px
-					color #333
+					letter-spacing 1px
+					// color #333
+					color charcoal-grey
+					font-weight bold
+				p:last-child
+					font-family: 'PT Serif', serif;
+					font-size 12px
+					color #777
+					font-style italic
+					font-weight bold
 			.info
 				display flex
 				align-items center
