--- a/app/views/partials/elements/feed-work-created.html
+++ b/app/views/partials/elements/feed-work-created.html
@@ -3,7 +3,10 @@
     <header class="feed-card-header">
       <a href="#" class="user">
         <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448413621/d35z0dcxnppobefpreco.jpg">&nbsp;&nbsp;&nbsp;
-        <p>Sergio Gonzales Mucho</p>
+        <div>
+          <p class="uppercase">Sergio Gonzales Mucho</p>
+          <p class="u-margin-top-5">ha subido una obra</p>
+        </div>
       </a>
       <div class="info">
         <p>hace 1 min</p>&nbsp;&nbsp;&nbsp;
