--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -7,24 +7,24 @@
 			<div class="u-separator" style="background: #eee;"></div>
 			<div class="user-info">
 				<div class="avatar">
-					<img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448309987/mzfaeedegqqsjwzxt0oj.jpg">
+					<img src="{{user.photo}}">
 					<div class="info">
-						<p class="name">ARTYOM <br> TARASOV</p>
-						<p class="city u-margin-top-5">Lima, Perú</p>
+						<p class="name">{{user.firstname}} <br> {{user.lastname}}</p>
+						<p class="city u-margin-top-5">{{user.city}}, {{user.country}}</p>
 					</div>
 				</div>
 				<div class="stats">
 					<div class="stat">
 						<p>18</p>
-						<p class="u-margin-top-7">followers</p>
+						<p class="u-margin-top-7">seguidores</p>
 					</div>
 					<div class="stat">
 						<p>21</p>
-						<p class="u-margin-top-7">posts</p>
+						<p class="u-margin-top-7">obras</p>
 					</div>
 					<div class="stat">
 						<p>264</p>
-						<p class="u-margin-top-7">following</p>
+						<p class="u-margin-top-7">siguiendo</p>
 					</div>
 				</div>
 			</div>
