--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3429,12 +3429,88 @@ body
 /*------------------------------------*
 	$ NOTIFICATIONS
 *------------------------------------*/
-// .notifications-container
-// 	background #d8d8d8
+.notifications
+	background #d8d8d8
+	padding 20px
+	.inner
+		background white
+		border-radius 4px
+		max-width 540px
+		margin auto
+		.notifications-title
+			font-family: 'Montserrat',sans-serif;
+			font-weight bold
+			font-size 11px
+			color charcoal-grey
+			padding 18px 29px
+			letter-spacing 1px
+		.notification
+			border-top solid 1px #ededed
+			display block
+			&:hover
+				background #f7f7f7
+			&-header
+				display flex
+				padding 20px
+				align-items center
+				img
+					width 30px
+					height 30px
+					min-width 30px
+					border-radius 50%
+					margin-right 10px
+				.info
+					flex 1
+					p:first-child
+						font-family: 'Montserrat',sans-serif;
+						font-weight bold
+						font-size 10px
+						letter-spacing 1.5px
+						color charcoal-grey
+					p:last-child
+						font-family: 'PT Serif', serif;
+						font-size 12px
+						color #777777
+						font-style italic
+						strong
+							font-weight bold
+				.time
+					font-family: 'PT Serif', serif;
+					font-size 12px
+					color #aaa
+					font-style italic
 
-// 	.notifications
-// 		.notification
+			&-content
+				display flex
+				align-items center
+				padding 0 20px 20px 60px
+				img
+					width 60px
+					height 60px
+					border-radius 4px
+					margin-right 30px
+				.info
+					.name
+						font-family: 'Montserrat',sans-serif;
+						font-size 12px
+						color #393d3f
+						letter-spacing 1px
+						line-height 1.15
+					.valuations
+						font-family: 'Montserrat',sans-serif;
+						font-size 12px
+						color #333
 
+		.notifications-more
+			padding 20px
+			text-align center
+			cursor pointer
+			font-family: 'Montserrat',sans-serif;
+			font-weight bold
+			font-size 10px
+			color #838d8f
+			letter-spacing 1.5px
+			border-top solid 1px #ededed
 
 
 
